simplify and clean